Fixed a spacing issue with flags on non-standard elements

--- a/src/scss/modules/_custom-flagger.scss
+++ b/src/scss/modules/_custom-flagger.scss
@@ -90,3 +90,8 @@ post-flags {
         }
     }
 }
+
+/** Fixes the padding on non-<post> elements **/
+article post-flags {
+    bottom: 0;
+}
